# manipulate-motion-vectors

./: .gitignore  README.md  build.zig  build.zig.zon  hatch_build.py  manifest.vs  pyproject.toml
.github/workflows/: build.yaml
src/: main.zig  manipmv.zig  util.zig  vsutil.zig
src/plugin_functions/: expand_analysis_data.zig  scale_vect.zig  show_vect.zig
